--- a/App18.Material/Views/MainWindow.xaml
+++ b/App18.Material/Views/MainWindow.xaml
@@ -138,7 +138,7 @@
                         </Grid.RowDefinitions>
                         <!-- 抽屉-Bar-固定项 -->
                         <Viewbox VerticalAlignment="Top" Stretch="Uniform" Grid.Row="0">
-                            <ListBox VerticalAlignment="Top"
+                            <ListBox VerticalAlignment="Top" Margin="0,12,0,0"
                                      ItemsSource="{Binding NavigationItems}"
                                      SelectedValue="{Binding SelectedItem}">
                                 <ListBox.ItemContainerStyle>
