App02:优化ComboBox的使用

--- a/App02.TTS/Views/MainWindow.xaml
+++ b/App02.TTS/Views/MainWindow.xaml
@@ -23,8 +23,7 @@
                     <Label FontWeight="Bold">角色:</Label>
                     <ComboBox ItemsSource="{Binding Roles}"
                               DisplayMemberPath="Name" SelectedValuePath="VoiceKey"
-                              SelectedValue="{Binding SelectedValue}"
-                              SelectedIndex="{Binding IndexRole}"
+                              SelectedValue="{Binding SelectedValue, Mode=TwoWay}"
                               Width="200"
                               HorizontalAlignment="Left" />
                 </WrapPanel>
