--- a/App02.TTS/Views/MainWindow.xaml
+++ b/App02.TTS/Views/MainWindow.xaml
@@ -9,38 +9,38 @@
         Title="Speech Studio | Text-To-Speech" SizeToContent="WidthAndHeight">
     <Grid>
         <StackPanel>
-            <Grid Margin="10px">
+            <Grid Margin="10">
 
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-
-                <WrapPanel Margin="0,10,0,10" Orientation="Vertical" Grid.Row="0">
-                    <Label FontWeight="Bold">角色:</Label>
-                    <ComboBox ItemsSource="{Binding Roles}"
-                              DisplayMemberPath="Name" SelectedValuePath="VoiceKey"
-                              SelectedValue="{Binding SelectedValue, Mode=TwoWay}"
-                              Width="200"
-                              HorizontalAlignment="Left" />
-                </WrapPanel>
 
                 <TextBox Text="{Binding TxtContent}"
                          HorizontalAlignment="Left"
                          TextWrapping="Wrap"
                          AcceptsReturn="True"
-                         VerticalScrollBarVisibility="Visible"
                          FontSize="12"
-                         Height="100" Width="400"
-                         Grid.Row="1" />
+                         Width="600" Height="200"
+                         Grid.Row="0" />
 
+                <StackPanel Margin="0,10,0,10" Orientation="Horizontal" Grid.Row="1">
+                    <Label FontWeight="Bold">声音:</Label>
+                    <ComboBox ItemsSource="{Binding Voices}"
+                              DisplayMemberPath="Name" SelectedValuePath="VoiceKey"
+                              SelectedValue="{Binding SelectedValue, Mode=TwoWay}"
+                              HorizontalAlignment="Left" />
+                </StackPanel>
+                
                 <!-- Buttons -->
-                <Button Margin="0,10,0,10" Command="{Binding CommandSpeak}" Grid.Row="3">Echo Textbox</Button>
+                <WrapPanel Margin="0,10,0,10" Grid.Row="3">
+                    <Button Command="{Binding CommandSpeak}">Echo Textbox</Button>
+                </WrapPanel>
 
-                <Label Content="{Binding TxtError}" Grid.Row="4" />
+                <Label Foreground="Red" Content="{Binding TxtError}" Grid.Row="4" />
             </Grid>
         </StackPanel>
     </Grid>
